# EmbeddedMasterModbusGUI

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  lv_conf.h  main.c  main.h
GUI/inc/: ai.h  ao.h  connection.h  di.h  do.h  mainpage.h
GUI/src/: ai.c  ao.c  connection.c  di.c  do.c  mainpage.c
Modbus/inc/: myModbus.h
Modbus/src/: myModbus.c
libLVGL/: CMakeLists.txt
libLVGL/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.h
libmodbus/: CMakeLists.txt  autogen.exe.stackdump
libmodbus/src/win32/: UpgradeLog.htm  modbus-9.sln  modbus.vcxproj
